# AnimalsInheritance

./: CMakeLists.txt
include/: Animal.h  Continent.h  Elephant.h  Parrot.h  Penguin.h  Shark.cpp  Shark.h
src/: Animal.cpp  Elephant.cpp  Parrot.cpp  Penguin.cpp  main.cpp
